--- a/app/src/main/res/layout/image_info.xml
+++ b/app/src/main/res/layout/image_info.xml
@@ -1,169 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:gravity="center|top"
-    android:layout_gravity="center|top"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.ImageDisplayFragment">
-
-    <ScrollView
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:id="@+id/imgG"
+    android:layout_height="wrap_content"
+    android:paddingBottom="55dp"
+    android:background="#EDEDED"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageDisplayPicture"
+        android:id="@+id/imageGalleryPicture"
         android:layout_width="match_parent"
         android:layout_height="384dp"
         android:layout_marginBottom="3dp"
+        app:layout_constraintBottom_toTopOf="@+id/seedGalleryDisplay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/seedDisplay"
+        android:id="@+id/seedGalleryDisplay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="22dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/seedUsed"
         android:textAlignment="center"
+        android:textIsSelectable="true"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textIsSelectable="true" />
-
-    <LinearLayout
-        android:layout_marginTop="3dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-    <LinearLayout
-        android:padding="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.0"
-        android:orientation="horizontal">
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1.0"
-        android:orientation="vertical">
-    </LinearLayout>
-    <Button
-        android:id="@+id/generateNew"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:text="@string/generateNew"
-        android:textColor="#ffffff"
-        android:padding="8dp"
-        android:background="@drawable/button_border"
-        android:textSize="18sp"
-        android:layout_weight="3.0"
-        android:textAlignment="center" />
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1.0"
-        android:orientation="vertical">
-    </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:padding="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.0"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1.0"
-            android:orientation="vertical">
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/useAsInit"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3.0"
-            android:background="@drawable/button_border"
-            android:padding="8dp"
-            android:text="@string/useInit"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:textSize="18sp" />
-
-        <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1.0"
-        android:orientation="vertical">
-    </LinearLayout>
-<!--    <Button-->
-<!--        android:id="@+id/regenerate"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_weight="3.0"-->
-<!--        android:text="@string/regenerate"-->
-<!--        android:textColor="#ffffff"-->
-<!--        android:padding="8dp"-->
-<!--        android:background="@drawable/button_border"-->
-<!--        android:textSize="18sp"-->
-<!--        android:textAlignment="center" />-->
-    </LinearLayout>
-
-    <LinearLayout
-        android:padding="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.0"
-        android:orientation="horizontal">
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1.0"
-        android:orientation="vertical">
-    </LinearLayout>
-    <Button
-        android:id="@+id/save"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3.0"
-        android:text="@string/download"
-        android:drawableLeft="@drawable/baseline_download_24"
-        android:textColor="#ffffff"
-        android:padding="8dp"
-        android:background="@drawable/button_border"
-        android:textSize="18sp"
-        android:textAlignment="center" />
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1.0"
-        android:orientation="vertical">
-    </LinearLayout>
-    </LinearLayout>
-
-    </LinearLayout>
+        app:layout_constraintBottom_toTopOf="@+id/promptGalleryDisplay"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
-        android:id="@+id/saved"
+        android:id="@+id/promptGalleryDisplay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="31dp"
+        android:text="@string/promptUsed"
         android:textAlignment="center"
+        android:textIsSelectable="true"
         android:textSize="22sp"
-        android:textStyle="bold" />
-</LinearLayout>
-</ScrollView>
-</LinearLayout>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/saveImage"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="94dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="29dp"
+        android:padding="8dp"
+        android:text="@string/delete"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/promptGalleryDisplay"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/saveImage"
+        android:layout_width="263dp"
+        android:layout_height="65dp"
+        android:layout_weight="2"
+        android:drawableLeft="@drawable/baseline_download_24"
+        android:padding="8dp"
+        android:text="@string/download"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/delete"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
